# wasm-chess-ctv

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust-ci.yml
src/: get_legal_moves.rs  lib.rs  native_tests.rs  parsing.rs
src/helpers/: ascii.rs  find_deviation.rs  find_divergence.rs  legal_moves.rs  mod.rs  parsing.rs  pgn.rs  pgn_reader.rs  rs_js_structs.rs  tsify.rs  tsify_structs.rs
src/impls/: impl_annotations.rs  impl_board.rs  impl_comments.rs  impl_core.rs  impl_headers.rs  impl_history.rs  impl_moves.rs  impl_pgn.rs  impl_queries.rs  impl_state.rs  impl_validation.rs  mod.rs
src/pgn_loader/: pgn_reader.rs
src/tests/: ascii_tests.rs  attackers_tests.rs  board_tests.rs  castling_rights_tests.rs  comments_test.rs  fen_tests.rs  find_deviation_test.rs  find_divergence_test.rs  find_piece_tests.rs  headers_tests.rs  history_tests.rs  legal_moves_test.rs  load_pgn_tests.rs  mod.rs  move_tests.rs  move_turn_at_tests.rs  native_tests.rs  pgn_tests.rs  put_tests.rs  san_tests.rs  undo_move_test.rs
src/tests/pgn/: 1.pgn  chessjs-1.pgn  chessjs-2.pgn  chessjs-3.pgn
src/tsify_structs/: mod.rs  move_verbose.rs  others.rs  piece_obj.rs  piece_symbol.rs  square_str.rs
src/utils/: find_divergence.rs  parsing.rs
