[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "*" }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
shakmaty = { version = "0.30.0", features = ["serde"] }
pgn-reader = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5", features = ["js"] }
ordermap = { version = "1.2.0", features = ["serde"] }

strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = { version = "*" }
pretty_assertions = { version = "1.4" }

# Enable simd feature for this crate
[features]
default = []
simd = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
